--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,17 @@ python-multipart>=0.0.5
 nltk>=3.6.3
 nlpaug>=1.1.11
 
-# Additional Dependencies
+# Image Processing
+opencv-python>=4.8.0
+Pillow>=10.0.0  # Python Imaging Library
+
+# Core Dependencies
 torch>=1.9.0
 numpy>=1.21.0
+scikit-learn>=1.0.0
+pandas>=1.3.0
 
 # Optional but recommended
-python-dotenv>=0.19.0  # for environment variables 
+python-dotenv>=0.19.0  # for environment variables
+tqdm>=4.65.0  # for progress bars
+requests>=2.31.0  # for HTTP requests
