--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,16 @@ nlpaug>=1.1.11
 opencv-python>=4.8.0
 Pillow>=10.0.0  # Python Imaging Library
 
+# Audio Processing
+librosa>=0.10.0
+soundfile>=0.12.1
+audioread>=3.0.0
+numba>=0.58.1  # Required for librosa
+scipy>=1.11.4  # Required for audio processing
+ffmpeg-python>=0.2.0  # For audio file handling
+SoundFile>=0.12.1  # For audio file I/O
+matplotlib>=3.8.0  # For generating spectrograms
+
 # Core Dependencies
 torch>=1.9.0
 numpy>=1.21.0
