--- a/requirements.txt
+++ b/requirements.txt
@@ -7,28 +7,24 @@ python-multipart>=0.0.5
 # NLP Libraries
 nltk>=3.6.3
 nlpaug>=1.1.11
+beautifulsoup4>=4.11.1
 
 # Image Processing
 opencv-python>=4.8.0
-Pillow>=10.0.0  # Python Imaging Library
+Pillow>=10.0.0
 
 # Audio Processing
 librosa>=0.10.0
 soundfile>=0.12.1
 audioread>=3.0.0
-numba>=0.58.1  # Required for librosa
-scipy>=1.11.4  # Required for audio processing
-ffmpeg-python>=0.2.0  # For audio file handling
-SoundFile>=0.12.1  # For audio file I/O
-matplotlib>=3.8.0  # For generating spectrograms
+numba>=0.58.1
+scipy>=1.11.4
+matplotlib>=3.8.0
 
 # Core Dependencies
-torch>=1.9.0
 numpy>=1.21.0
-scikit-learn>=1.0.0
-pandas>=1.3.0
 
 # Optional but recommended
-python-dotenv>=0.19.0  # for environment variables
-tqdm>=4.65.0  # for progress bars
-requests>=2.31.0  # for HTTP requests
+python-dotenv>=0.19.0
+tqdm>=4.65.0
+requests>=2.31.0
